# odoo-readme-bot

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
odoo_readme_bot/: analyzer.py  cli.py  detector.py  docs_sync.py  generator.py  git_utils.py  gitlab_configurator.py  hook_installer.py  local_client.py  odoo_client.py  prompt.md  readme_utils.py
tests/: test_analyzer.py  test_detector.py  test_docs_sync.py  test_generator.py  test_git_utils.py  test_gitlab_configurator.py  test_hook_installer.py  test_odoo_client.py  test_readme_utils.py
